# named

./: .dir-locals.el  .gitignore  LICENSE  Makefile  buffer.c  buffer.h  dns.c  dns.h  drop.sql  fixture.sql  gdbinit  init.sql  list.c  list.h  log.c  log.h  named.c  named.cabal  readme.md  rope.c  rope.h  util.c  util.h
src/: Main.hs  NameDaemon.hs
tools/: add_a_record
